samples/_failures_safe/1761392974_b71b06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fde282f0.c: In function ‘main’:
./samples/SAFE/__tmp_fde282f0.c:133:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  133 |     size_t compressed_size
      |     ^~~~~~
./samples/SAFE/__tmp_fde282f0.c:133:5: error: expected declaration or statement at end of input
